# GameEngine

./: .clang-tidy  .codecov.yml  .gitignore  .gitmodules  CMakeLists.txt  CTestConfig.cmake  Doxyfile.in  LICENSE  README.md  codecov.yml
.github/: codeql-config.yml
.github/codeql/: codeql-config.yml
.github/workflows/: .codeql.yml  CI-Clean.yml  CI.yml  CppLint.yml  DailyCoverage.yml  Deploy.yml  DeployDocs.yml  Doc-Deploy.yml  Fuzz.yml  FuzzTesting.yml  ProfileBuild.yml  (+24 more)
Engine/: CMakeLists.txt  Engine.hpp  Platform.hpp  main.cpp
Engine/core/: APP.cpp  APP.hpp  AutoRelease.hpp  Buffer.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  DynLib.cpp  DynLib.hpp  Event.hpp  EventQueue.hpp  Exception.cpp  Exception.hpp  Function.hpp  Game.hpp  GameObject.cpp  GameObject.hpp  Image.cpp  Image.hpp  Keyboard.cpp  Keyboard.hpp  Log.cpp  Log.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Mouse.cpp  Mouse.hpp  OpenGL.cpp  OpenGL.hpp  Platform.hpp  Renderer.cpp  Renderer.hpp  ResMan.hpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  (+21 more)
Engine/core/platform/Android/: DynLib.cpp  Log.inl  SysInfo.cpp
Engine/core/platform/Emscripten/: SysInfo.cpp
Engine/core/platform/Linux/: DynLib.cpp  Log.inl  SysInfo.cpp
Engine/core/platform/Unix/: DynLib.cpp  SysInfo.cpp
Engine/core/platform/Windows/: DynLib.cpp  Log.inl  SysInfo.cpp
Engine/core/platform/android/: APP.cpp  Log.inl  SysInfo.cpp
Engine/core/platform/linux/: SysInfo.cpp  SysInfo.inl  Window.inl
Engine/core/platform/unix/: SysInfo.cpp
Engine/core/platform/web/: Log.inl  SysInfo.cpp  SysInfo.inl  Window.inl
Engine/core/platform/windows/: SysInfo.cpp  SysInfo.inl  Window.inl
Engine/graphics/: APP.cpp  APP.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  GApi.hpp  GameObject.cpp  GameObject.hpp  GraphicApi.hpp  Image.cpp  Image.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  OpenGL.cpp  OpenGL.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  SkyBox.cpp  SkyBox.hpp  TextRenderer.cpp  TextRenderer.hpp  Texture.cpp  Texture.hpp  Transform.cpp  Transform.hpp  Window.cpp  Window.hpp  gl.cpp  gl.h  gl.hpp  (+1 more)
Engine/graphics/platform/Android/: APP.cpp  OpenGL.cpp  Window.cpp  gl.inl
Engine/graphics/platform/Emscripten/: OpenGL.cpp  Window.cpp  gl.inl
Engine/graphics/platform/Linux/: OpenGL.cpp  Window.cpp  gl.inl
Engine/graphics/platform/Windows/: OpenGL.cpp  Window.cpp  gl.inl
Engine/graphics/platform/android/: OpenGL.cpp  Window.cpp  gl.inl
Engine/graphics/platform/linux/: OpenGL.cpp  OpenGL.inl  Window.cpp  Window.inl  gl.inl
Engine/graphics/platform/web/: APP.cpp  OpenGL.cpp  OpenGL.inl  Window.cpp  Window.inl  gl.inl
Engine/graphics/platform/win32/: OpenGL.inl  gl.inl
Engine/graphics/platform/windows/: APP.cpp  OpenGL.cpp  OpenGL.inl  Window.cpp  Window.inl  gl.inl
Engine/include/core/: Buffer.hpp  Camera.hpp  EventQueue.hpp  Function.hpp  Image.hpp  Log.hpp  Mesh.hpp  Mouse.hpp  Platform.hpp  Renderer.hpp  Scene.hpp  Texture.hpp  Utils.hpp
Engine/input/: CMakeLists.txt  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp
Engine/input/platform/android/: Keyboard.cpp
Engine/input/platform/linux/: Keyboard.cpp  Keyboard.inl  Mouse.cpp  Mouse.inl
Engine/input/platform/web/: Keyboard.cpp  Keyboard.inl  Mouse.cpp  Mouse.inl
Engine/input/platform/win32/: Keyboard.inl  Mouse.inl
Engine/input/platform/windows/: Keyboard.cpp  Mouse.cpp  Mouse.inl
Engine/inputs/: CMakeLists.txt  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  inputs.hpp
Engine/inputs/platform/Android/: Keyboard.cpp  Mouse.cpp
Engine/inputs/platform/Emscripten/: Keyboard.cpp  Mouse.cpp
Engine/inputs/platform/Linux/: Mouse.cpp
Engine/inputs/platform/Windows/: Keyboard.cpp  Mouse.cpp
Engine/inputs/platform/android/: Keyboard.cpp  Keyboard.inl  Mouse.cpp
Engine/inputs/platform/linux/: Keyboard.cpp  Keyboard.inl
Engine/inputs/platform/web/: Keyboard.cpp  Keyboard.inl
Engine/inputs/platform/windows/: Keyboard.cpp  Keyboard.inl
Engine/src/core/: GameObject.cpp  Image.cpp  Keyboard.cpp  OpenGL.cpp  Shader.cpp  SkyBox.cpp  Texture.cpp  Window.cpp
Engine/ui/: CMakeLists.txt  Font.cpp  Font.hpp  Text.cpp  Text.hpp  UiFont.cpp  UiFont.hpp  ui.hpp
Game/: CMakeLists.txt  Game.cpp
SandBox/: CMakeLists.txt  Game.cpp  main.cpp
Shasers/: Traingl.frag  Traingl.vert
android/: build.gradle
cmake/: ASLR.cmake  AndroidManifest.xml  AndroidNativeApk.cmake  BunndleApk.cmake  CodeCoverage.cmake  CompilerFlags.cmake  CopyDllsIfNeeded.cmake  Coverage.cmake  Deps.cmake  Docs.cmake  Emscripten.cmake  FetchDeps.cmake  FindGcov.cmake  FindLcov.cmake  Findcodecov.cmake  GenDocs.cmake  Harden.cmake  Hardening.cmake  IncludeDeps.cmake  InstaledPackages.cmake  LTO.cmake  LinkTimeOpt.cmake  Options.cmake  Pack.cmake  RTTI.cmake  Sanitize.cmake  Sanitizers.cmake  StaticLink.cmake  debug.keystore  helpers.cmake  index.html  index_template.cmake.in  sanitizers.cmake
include/: pch.h
src/: APP.cpp  APP.hpp  Camera.cpp  Camera.hpp  EBO.cpp  EBO.hpp  G_vars.hpp  GameObject.cpp  GameObject.hpp  Global_H.hpp  Image.cpp  Inpust.hpp  Inputs.cpp  Keyboard.cpp  Keyboard.hpp  Log.cpp  Material.cpp  Mesh.cpp  Mesh.hpp  Mouse.cpp  Mouse.hpp  OpenGL.cpp  OpenGL.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  Scene.cpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  SkyBox.cpp  Texture.cpp  Texture.hpp  Transform.cpp  Utils.cpp  Utils.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp  (+4 more)
tests/: AutoRelease_test.cpp  CMakeLists.txt  Camera_test.cpp  Scene_test.cpp  Transform_test.cpp  Utils_test.cpp  first_test.cpp  fmts_test.cpp  load_async_file_exist_test.cpp  load_async_file_test.cpp  load_file_async_notexist_test.cpp  window_test.cpp
tests/fuzz/: CMakeLists.txt  Utils.cpp
tests/unit/: AutoRelease_test.cpp  Buffer_test.cpp  CMakeLists.txt  Camera_test.cpp  Exception.cpp  Function.cpp  Function_test.cpp  Log.cpp  Scene_test.cpp  SysInfo.cpp  Transform_test.cpp  Utils.cpp  Utils_test.cpp  fmts_test.cpp  type_info_test.cpp  window_test.cpp
(+57 files in other folders)
